wordpress/ingress-wordpress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-wordpress
                port:
                  number: 80
